--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "~0.1.3",
     "karma-script-launcher": "~0.1.0",
+    "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "1.5.0",
     "load-grunt-tasks": "~0.6.0",
     "react-hot-loader": "^1.0.7",
