--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "~0.1.3",
+    "karma-safari-launcher": "^0.1.1",
     "karma-script-launcher": "~0.1.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "1.5.0",
