Loading store now listening for loaded action and emits appropriately - dislike using a multi class in calling the dispatcher directly but seems acceptable for now

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
-    "react-router": "0.13.x",
-    "flux": "^2.0.1",
     "events": "^1.0.2",
+    "flux": "^2.0.1",
+    "normalize.css": "~3.0.3",
     "object-assign": "^2.0.0",
     "react": "0.13.x",
-    "normalize.css": "~3.0.3"
+    "react-router": "0.13.x"
   },
   "devDependencies": {
     "babel": "^5.0.0",
