--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-phantomjs-launcher": "~0.1.3",
     "karma-safari-launcher": "^0.1.1",
     "karma-script-launcher": "~0.1.0",
