--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
+    "array.prototype.find": "^1.0.0",
     "events": "^1.0.2",
     "flux": "^2.0.1",
     "normalize.css": "~3.0.3",
